implemented tests and function for getdevelopers
