# docs/api.yml
@@ -31,6 +31,8 @@ tags:
     description: User Verification operations
   - name: AFK
     description: User AFK operations
+  - name: Developers
+    description: Developer related operations
 paths:
   /xp/{guild_id}:
     get:
@@ -738,6 +740,22 @@ paths:
           $ref: "#/components/responses/NotAuthorized"
         "404":
           description: Guild/User ID not found
+    get:
+      tags:
+        - Developers
+      summary: Fetches the userIDs of the developers
+      description: |-
+        This route fetches the userIDs of the developers from the database
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items: string
+        '401':
+          $ref: '#/components/responses/NotAuthorized'
 components:
   responses:
     NotAuthorized:
