# src/routes/v1/index.ts
@@ -6,6 +6,7 @@ import XPRouter from './xp';
 import warningsRouter from './warnings';
 import verificationRouter from './verification';
 import afkRouter from './afk';
+import developersRouter from './developers';
 
 const router = express.Router();
 
@@ -14,5 +15,6 @@ router.use('/xp', XPRouter);
 router.use('/warnings', warningsRouter);
 router.use('/verification', verificationRouter);
 router.use('/afk', afkRouter);
+router.use('/developers', developersRouter);
 
 export default router;
